JDOM differ implemented to optimize school parser processing.